--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.17",
+    "aos": "^2.3.4",
     "axios": "^1.13.2",
     "firebase": "^12.5.0",
     "gsap": "^3.13.0",
